new evaluation metrics and new poems

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,9 @@
     <p id="poem">{{line_3}}</p>
     <p id="poem">{{line_4}}</p>
     <p id="poem">{{line_5}}</p>
+
+
+    <p id="score">Here is poem score: </p>
+    <p id="score">{{poem_score}}</p>
   </body>
 </html>
